--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 # required by server.py
-pqueue
-bottle
+pqueue == 0.1.7
+bottle == 0.12.13
 
 # required by s3_util.py
-boto3
+boto3 == 1.4.7
 
 # required by database_manager.py
-pymongo
-pandas
-sklearn
+pymongo == 3.5.1
+pandas == 0.20.2 
+sklearn == 0.0
 
 # required by originality.py
-scipy
+scipy == 0.19.1
 
+# Misc requirements:
+requests == 2.12.4
+setuptools == 33.1.1
+numpy == 1.11.0
+botocore == 1.7.9
+scikit_learn == 0.19.0
