--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,5 @@ botocore == 1.7.9
 scikit_learn == 0.19.0
 
 # required by benchmarks
-randomstate==1.13.2
-Cython=0.26.1
+randomstate == 1.13.2
+Cython == 0.26.1
