--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ boto3 == 1.4.7
 # required by database_manager.py
 pandas == 0.20.3
 sklearn == 0.0
+psycopg2 == 2.7.3.1
 
 # required by originality.py
 scipy == 0.19.1
