--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ boto3 == 1.4.7
 pandas == 0.20.3
 sklearn == 0.0
 psycopg2 == 2.7.3.1
+sqlalchemy == 1.1.14
 
 # required by originality.py
 scipy == 0.19.1
