--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ pandas == 0.20.3
 sklearn == 0.0
 psycopg2 == 2.7.3.1
 sqlalchemy == 1.1.14
+mysqlclient == 1.3.12
 
 # required by originality.py
 scipy == 0.19.1
