--- a/.elasticbeanstalk/api-ml-production.cfg.yml
+++ b/.elasticbeanstalk/api-ml-production.cfg.yml
@@ -1,16 +1,19 @@
 AWSConfigurationTemplateVersion: 1.1.0.0
 EnvironmentConfigurationMetadata:
-  DateModified: '1510104971991'
+  DateModified: '1510195825135'
 EnvironmentTier:
   Name: WebServer
   Type: Standard
 OptionSettings:
   AWSEBSecurityGroup.aws:ec2:vpc:
     VPCId: vpc-1ebbd078
+  aws:autoscaling:asg:
+    MaxSize: 1
+    MinSize: 1
   aws:autoscaling:launchconfiguration:
     IamInstanceProfile: api-ml-production-role
     InstanceType: r4.2xlarge
-    SecurityGroups: sg-6c331911
+    SecurityGroups: sg-b7468fca
   aws:ec2:vpc:
     AssociatePublicIpAddress: false
     ELBSubnets: subnet-dff52c97
