--- a/.pylintrc
+++ b/.pylintrc
@@ -5,7 +5,8 @@ max-locals=60
 max-branches=22
 max-statements=150
 min-similarity-lines=7
-disable=W0141,superfluous-parens,multiple-statements,C0111,C0103,E1101,pointless-string-statement,bare-except,undefined-loop-variable,global-variable-not-assigned,global-statement,import-error,locally-disabled,len-as-condition
+max-args=7
+disable=W0141,multiple-statements,C0111,C0103,E1101,bare-except,undefined-loop-variable,global-statement,import-error,locally-disabled,len-as-condition,logging-format-interpolation,broad-except,unsubscriptable-object,cell-var-from-loop
 
 [TYPECHECK]
 ignored-modules = numpy, numpy.random, tensorflow
