--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,3 +32,28 @@ jobs:
             . venv/bin/activate
             flake8 --config=./.flake8 ./
             find . -iname "*.py" ! -name "setup.py" ! -name "__init__.py" ! -path "./venv/*" | xargs pylint --rcfile=./.pylintrc
+  deploy:
+    docker:
+      - image: circleci/python:3.5.3
+      - image: 
+    steps:
+      - run:
+          name: Install AWS & EB CLI
+          command: |
+            pip install awscli --upgrade
+            pip install awsebcli --upgrade
+      - run:
+          name: Build and Deploy
+          command: ./deploy/push.sh prod api-ml-production
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
