--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,14 @@ jobs:
             . venv/bin/activate
             flake8 --config=./.flake8 ./
             find . -iname "*.py" ! -name "setup.py" ! -name "__init__.py" ! -path "./venv/*" | xargs pylint --rcfile=./.pylintrc
+    test:
+      docker:
+          - image: circleci/python:3.5.3
+      steps:
+        - run:
+            name: Run Benchmarks
+            command: |
+              ./benchmark_originality.py
   deploy:
     docker:
       - image: circleci/python:3.5.3
@@ -50,6 +58,7 @@ workflows:
   build-deploy:
     jobs:
       - build
+      - test
       - deploy:
           requires:
             - build
