--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ jobs:
     docker:
         - image: circleci/python:3.5.3
     steps:
+      - checkout
       - run:
           name: Run Benchmarks
           command: |
