--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,9 +32,15 @@ jobs:
             . venv/bin/activate
             flake8 --config=./.flake8 ./
             find . -iname "*.py" ! -name "setup.py" ! -name "__init__.py" ! -path "./venv/*" | xargs pylint --rcfile=./.pylintrc
+  test:
+    docker:
+        - image: circleci/python:3.5.3
+    steps:
+      - checkout
       - run:
           name: Run Benchmarks
           command: |
+            . venv/bin/activate
             ./benchmark_originality.py
   deploy:
     docker:
@@ -54,6 +60,7 @@ workflows:
   build-deploy:
     jobs:
       - build
+      - test
       - deploy:
           requires:
             - build
