--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,8 +45,8 @@ jobs:
       - run:
           name: Install AWS & EB CLI
           command: |
-            pip install awscli --upgrade
-            pip install awsebcli --upgrade
+            pip install awscli --upgrade --user
+            pip install awsebcli --upgrade --user
       - run:
           name: Build and Deploy
           command: ./deploy/push.sh prod api-ml-production
