--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ jobs:
     docker:
       - image: circleci/python:3.5.3
     steps:
+      - checkout
       - run:
           name: Install AWS & EB CLI
           command: |
