--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,3 +63,6 @@ workflows:
       - deploy:
           requires:
             - build
+          filters:
+            branches:
+              only: master
