--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,7 @@ jobs:
       - run:
           name: Deploy
           command: |
+            ./deploy/gen-dockerrun.sh api-ml-production
             eb deploy --staged api-ml-production
 
 workflows:
